# Finances

./: .gitignore  LICENSE  README.md  db.sqlite3  main.py  pyproject.toml  requirements.txt
core/: db.py  forms.py  repository.py  urls.py  views.py
core/templates/: base.html  dashboard.html  form.html  form_investments.html  form_spents.html  index.html  investments.html  navbar.html  spents.html
core/templatetags/: url_replace.py
finance_portal/: settings-NOTE050.py  settings.py  urls.py
finance_portal/core/: db.py  views.py
finance_portal/core/templates/: footer.html  form_investments.html  investments.html  spents.html
modules/: dashboard.py  database.py
services/: db_connection.py
